fix align on 414px

--- a/src/style/pages/game-room.scss
+++ b/src/style/pages/game-room.scss
@@ -42,6 +42,10 @@
 }
 
 #number-caller-board__list-of-numbers {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: center;
   list-style: none;
   padding: 20px;
   margin-bottom: 0;
@@ -57,7 +61,7 @@
     color: #819192;
     font-size: 1.25rem;
     font-weight: 500;
-    margin: 4px 2px;
+    margin: 3px;
     transition: .7s;
     &.active {
       background-color: #ecc50e;
@@ -141,7 +145,6 @@
 @media (min-width: 1300px) {
   #number-caller-board__list-of-numbers {
     li {
-      margin: 4px 0;
       &:nth-child(1),
       &:nth-child(16),
       &:nth-child(31),
@@ -169,6 +172,9 @@
   #number-caller-board__current-call-number {
     order: -1;
   }
+  #number-caller-board__list-of-numbers li {
+    margin: 4px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -193,6 +199,9 @@
 }
 
 @media (max-width: 374px) {
+  #number-caller-board__list-of-numbers li {
+    margin: 3px;
+  }
   #game-bar__recently-taken {
     flex-direction: column;
     margin-bottom: 12px;
